[package]
name = "treena"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Tree stored in an arena"
repository = "https://gitlab.com/lo48576/treena"
keywords = ["arena", "tree"]
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

std = []

[dependencies]

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "lo48576/treena", branch = "master" }
