[package]
name = "treena"
version = "0.0.5"
authors = ["YOSHIOKA Takuma <nop_thread@nops.red>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Tree stored in an arena"
repository = "https://gitlab.com/nop_thread/treena"
keywords = ["arena", "tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
# See <https://docs.rs/about/builds>.
#
# Didn't create `docsrs` feature, since this (`#[doc(cfg(feature = ...))]`)
# depends on nightly feature and it prevents `cargo doc --all-features` from
# running with stable rust toolchain.
# See <https://doc.rust-lang.org/rustdoc/unstable-features.html#extensions-to-the-doc-attribute>
# for unstable `#[doc(cfg(...))]` attribute.
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]

std = []

[dependencies]

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "nop_thread/treena", branch = "master" }
